1.1.7 DataTable is perfect * [x] 1.1.7 - frontend/DataTable: bugfix: sorting rendered columns is possible when hidden data is added inside a span * [x] 1.1.7 - frontend/DataTable: bugfix: fixed arrows not flipping on first click by removing !(column.key in sortOrders) * [x] 1.1.7 - frontend/DataTable: bugfix: hide sort arrows for rendered columns with no data * [x] 1.1.7 - frontend/Accounts: fixed storage object not showing anymore: split account.insert into 2 queries so storage data is not deleted * [x] 1.1.7 - frontend/DataTable: now wraps text inside <p> to get row color and avoid coloring buttons inside a td 	modified:   CONTRIBUTING.md 	modified:   Dockerfile 	modified:   backend/accounts.js 	modified:   backend/db.js 	modified:   frontend/src/components/DataTable.js 	modified:   frontend/src/components/Navbar.js 	modified:   frontend/src/index.css 	modified:   frontend/src/pages/Accounts.js 	modified:   frontend/src/pages/Logins.js

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,7 +92,9 @@ body {
 
 .cursor-pointer {cursor: pointer;}
 
-/* DataTable Highlight animation */
+
+/* -------------------- DataTable -------------------- */
+/* --- Highlight animation --- */
 @keyframes highlight {
   0%    { background-color: yellow; }
   4%    { background-color: transparent; }
@@ -102,9 +104,18 @@ body {
   100%  { background-color: transparent; }
 }
 
-/* Style for the cell with a recent change */
 .highlight-change {
   animation: highlight 4s ease-in-out;
 }
-/* DataTable Highlight animation */
+/* --- Highlight animation --- */
 
+/* opacity for text in td only, not the buttons or icons */
+.td-opacity-25 td span {
+  opacity: .25;
+}
+
+/* text-danger or any text color applied at row lever is superseeded by the below, from table class */
+.table > :not(caption) > * > * {
+  color: inherit;
+}
+/* -------------------- DataTable -------------------- */
